fix typos; post A02

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week0">Getting Started</a></p>
+<p>Current Agenda: <a href="#week02">Week 03</a></p>
 </li>
 <li>
-<p><a href="assts/asst01.html">Assignment 01</a>: <strong>Due January 25th</strong>.</p>
+<p><a href="assts/asst02.html">Assignment 02</a>: <strong>Due Feb 1st</strong>.</p>
 </li>
 </ul>
 </div>
@@ -102,17 +102,17 @@ will be introduced at the end of the course.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Prof. Normoyle</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">200A</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">TBD, by appointment</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Wednesdays, 2:30-3:30 PM, by appointment</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Jasmine</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">TBD</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Wednesdays, 7-8 PM</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Synarah</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">TBD</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 7- 8 PM</p></td>
 </tr>
 </tbody>
 </table>
@@ -170,16 +170,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Appendix 1</a></p>
 </li>
 <li>
-<p><a href="assts/asst01.html">Assignment 01</a>: Due Jan 25</p>
-</li>
-<li>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
 </li>
 <li>
-<p>Topics: Programming at the command line, From Java to C</p>
-</li>
-<li>
-<p>Lab: SSH and Github setup</p>
+<p>Topics: Programming at the command line, Makefiles, From Java to C</p>
 </li>
 </ul>
 </div></div></td>
@@ -188,15 +182,15 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Jan 23,25 <a id="week02"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Pointers</strong></p>
+<p><strong>More C, Introduction to Pointers</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: Function stacks, scope, dynamically-allocated memory (malloc/free), heap</p>
+<p>Topics: Function stacks, scope</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 02</a>: Feb 1</p>
+<p><a href="assts/asst01.html">Assignment 01</a>: Due Jan 25</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 2</a></p>
@@ -205,7 +199,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="https://pythontutor.com/c.html#mode=edit">C Tutor</a></p>
 </li>
 <li>
-<p>Lab: Editor Workshop</p>
+<p>Lab: SSH and Github setup</p>
 </li>
 </ul>
 </div></div></td>
@@ -219,19 +213,16 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: Pointer-based data structures, More I/O</p>
+<p>Topics: Heap, dynamically-allocated memory (malloc, free), pointer-based data structures, More I/O</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 03</a>: Due Feb 8</p>
+<p><a href="assts/asst02.html">Assignment 02</a>: Feb 1</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 3</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 2</a></p>
 </li>
 <li>
-<p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3 and 4</a></p>
-</li>
-<li>
-<p>Lab: Jam practice</p>
+<p>Lab: Quiz 01 practice, <a href="studyguide1.html">Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -248,10 +239,13 @@ on lecture content, worksheets, and assignments.</p>
 <p>Topics: GDB, Valgrind, Binary representations of integers</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 04</a>: Due Feb 15</p>
+<p><a href="assts/.html">Assignment 03</a>: Due Feb 8</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.1-4.3</a></p>
+<p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3 and 4</a></p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 3</a></p>
 </li>
 <li>
 <p>Lab: <strong>Code Jam 01</strong>, <a href="studyguide1.html">Study Guide</a></p>
@@ -268,10 +262,10 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.4-4.9</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.1-4.3</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 05</a>: Due Feb 22</p>
+<p><a href="assts/.html">Assignment 04</a>: Due Feb 15</p>
 </li>
 <li>
 <p>Lab: <strong>Jam Redux 01; Study Guide 02</strong></p>
@@ -288,10 +282,13 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.4-4.9</a></p>
+</li>
+<li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Section 5.1, Chapter 6</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 06</a>: Due March 1</p>
+<p><a href="assts/.html">Assignment 05</a>: Due Feb 22</p>
 </li>
 <li>
 <p>Lab: <strong>Code Jam 02</strong>, <a href="studyguide2.html">Study Guide 2</a></p>
@@ -309,6 +306,9 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
+</li>
+<li>
+<p><a href="assts/.html">Assignment 06</a>: Due March 1</p>
 </li>
 <li>
 <p>Lab: <strong>Jam 02 Redux</strong></p>
@@ -749,7 +749,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-18 11:58:02 -0500
+Last updated 2023-01-27 12:57:27 -0500
 </div>
 </div>
 </body>
