--- a/schedule.html
+++ b/schedule.html
@@ -466,16 +466,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Appendix 1</a></p>
 </li>
 <li>
-<p><a href="assts/asst01.html">Assignment 01</a>: Due Jan 25</p>
-</li>
-<li>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
 </li>
 <li>
-<p>Topics: Programming at the command line, From Java to C</p>
-</li>
-<li>
-<p>Lab: SSH and Github setup</p>
+<p>Topics: Programming at the command line, Makefiles, From Java to C</p>
 </li>
 </ul>
 </div></div></td>
@@ -484,15 +478,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Jan 23,25 <a id="week02"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Pointers</strong></p>
+<p><strong>More C, Introduction to Pointers</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: Function stacks, scope, dynamically-allocated memory (malloc/free), heap</p>
+<p>Topics: Function stacks, scope</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 02</a>: Feb 1</p>
+<p><a href="assts/asst01.html">Assignment 01</a>: Due Jan 25</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 2</a></p>
@@ -501,7 +495,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://pythontutor.com/c.html#mode=edit">C Tutor</a></p>
 </li>
 <li>
-<p>Lab: Editor Workshop</p>
+<p>Lab: SSH and Github setup</p>
 </li>
 </ul>
 </div></div></td>
@@ -515,19 +509,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: Pointer-based data structures, More I/O</p>
+<p>Topics: Heap, dynamically-allocated memory (malloc, free), pointer-based data structures, More I/O</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 03</a>: Due Feb 8</p>
+<p><a href="assts/asst02.html">Assignment 02</a>: Feb 1</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 3</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 2</a></p>
 </li>
 <li>
-<p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3 and 4</a></p>
-</li>
-<li>
-<p>Lab: Jam practice</p>
+<p>Lab: Quiz 01 practice, <a href="studyguide1.html">Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -544,10 +535,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Topics: GDB, Valgrind, Binary representations of integers</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 04</a>: Due Feb 15</p>
+<p><a href="assts/.html">Assignment 03</a>: Due Feb 8</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.1-4.3</a></p>
+<p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3 and 4</a></p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 3</a></p>
 </li>
 <li>
 <p>Lab: <strong>Code Jam 01</strong>, <a href="studyguide1.html">Study Guide</a></p>
@@ -564,10 +558,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.4-4.9</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.1-4.3</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 05</a>: Due Feb 22</p>
+<p><a href="assts/.html">Assignment 04</a>: Due Feb 15</p>
 </li>
 <li>
 <p>Lab: <strong>Jam Redux 01; Study Guide 02</strong></p>
@@ -584,10 +578,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.4-4.9</a></p>
+</li>
+<li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Section 5.1, Chapter 6</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 06</a>: Due March 1</p>
+<p><a href="assts/.html">Assignment 05</a>: Due Feb 22</p>
 </li>
 <li>
 <p>Lab: <strong>Code Jam 02</strong>, <a href="studyguide2.html">Study Guide 2</a></p>
@@ -605,6 +602,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
+</li>
+<li>
+<p><a href="assts/.html">Assignment 06</a>: Due March 1</p>
 </li>
 <li>
 <p>Lab: <strong>Jam 02 Redux</strong></p>
@@ -771,7 +771,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-18 11:02:49 -0500
+Last updated 2023-01-27 12:15:47 -0500
 </div>
 </div>
 </body>
