Update Synarah office hours

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ will be introduced at the end of the course.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Synarah</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 7- 8 PM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 6-7 PM</p></td>
 </tr>
 </tbody>
 </table>
@@ -749,7 +749,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-27 12:57:27 -0500
+Last updated 2023-01-27 13:05:12 -0500
 </div>
 </div>
 </body>
