update fetch instructions

--- a/assts/asst02.html
+++ b/assts/asst02.html
@@ -56,6 +56,16 @@
 <p>Do a <strong>fetch upstream</strong> to obtain the basecode for this assignment.</p>
 </div>
 <div class="paragraph">
+<p>The first time you do a <code>fetch</code>, you need to set the URL of the upstream repository.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>git remote add upstream <a href="mailto:git@github.com">git@github.com</a>:brynmawr-cs223-s23/cs223-assignments.git</code></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
 <p>Using the command line</p>
 </div>
 <div class="ulist">
@@ -67,7 +77,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/main</code></p>
+<p>Run the command <code>git merge upstream/master</code></p>
 </li>
 </ul>
 </div>
@@ -386,7 +396,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-27 13:01:00 -0500
+Last updated 2023-01-27 14:07:30 -0500
 </div>
 </div>
 </body>
