--- a/studyguide1.html
+++ b/studyguide1.html
@@ -44,10 +44,7 @@
 <p>Function stacks</p>
 </li>
 <li>
-<p>Basic pointers and arrays</p>
-</li>
-<li>
-<p>malloc/free</p>
+<p>Basic arrays</p>
 </li>
 </ul>
 </div>
@@ -223,7 +220,7 @@ following questions:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-18 09:36:12 -0500
+Last updated 2023-01-30 12:31:01 -0500
 </div>
 </div>
 </body>
