--- a/studyguide2.html
+++ b/studyguide2.html
@@ -41,10 +41,13 @@
 <p>Common memory errors</p>
 </li>
 <li>
-<p>Reading and writing text files</p>
+<p>malloc/free</p>
 </li>
 <li>
 <p>2D arrays</p>
+</li>
+<li>
+<p>Reading and writing text files</p>
 </li>
 </ul>
 </div>
@@ -303,7 +306,7 @@ int main() {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-18 09:36:12 -0500
+Last updated 2023-01-30 12:23:55 -0500
 </div>
 </div>
 </body>
