--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="assts/asst01.html">Assignment 01</a>: Due Jan 25</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 2</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
 </li>
 <li>
 <p><a href="https://pythontutor.com/c.html#mode=edit">C Tutor</a></p>
@@ -208,18 +208,18 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Jan 30, Feb 1 <a id="week03"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Pointers</strong></p>
+<p><strong>Pointers, malloc/free</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: Heap, dynamically-allocated memory (malloc, free), pointer-based data structures, More I/O</p>
+<p>Topics: Heap, dynamically-allocated memory (malloc, free), More arrays</p>
 </li>
 <li>
 <p><a href="assts/asst02.html">Assignment 02</a>: Feb 1</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 2</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
 </li>
 <li>
 <p>Lab: Quiz 01 practice, <a href="studyguide1.html">Study Guide</a></p>
@@ -231,21 +231,21 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Feb 6,8 <a id="week04"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Debugging. Binary and Data Representation I</strong></p>
+<p><strong>Pointer-based data structures. Debugging.</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: GDB, Valgrind, Binary representations of integers</p>
+<p>Topics: Linked lists in C. GDB, Valgrind</p>
 </li>
 <li>
 <p><a href="assts/.html">Assignment 03</a>: Due Feb 8</p>
 </li>
 <li>
-<p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3 and 4</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 3.1-3.3</a></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 3</a></p>
+<p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3</a></p>
 </li>
 <li>
 <p>Lab: <strong>Code Jam 01</strong>, <a href="studyguide1.html">Study Guide</a></p>
@@ -257,7 +257,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Feb 13,15 <a id="week05"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Binary and Data Representation II</strong></p>
+<p><strong>Binary and Data Representation I</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -277,7 +277,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Feb 20,22 <a id="week06"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Computer architecture, Assembly</strong></p>
+<p><strong>Binary and Data Representation II</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -300,7 +300,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Feb 27, March 1 <a id="week07"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Assembly I</strong></p>
+<p><strong>Computer architecture, Assembly</strong></p>
 </div>
 <div class="ulist">
 <ul>
