--- a/studyguide1.html
+++ b/studyguide1.html
@@ -107,7 +107,7 @@ Command 'hello' not found</code></pre>
 </div>
 <div class="paragraph">
 <p>4) Implement and test a power function (for positive integer exponents only).
-A call to your function should compute \$base^{exp}\$ and might look like:</p>
+A call to your function should compute \(base^{exp}\) and might look like:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -115,7 +115,7 @@ A call to your function should compute \$base^{exp}\$ and might look like:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>5) Implement a function <code>void remove(char* str, char letter)</code> that removes all occurrences of <code>letter</code>
+<p>5) Implement a function <code>void removeLetter(char* str, char letter)</code> that removes all occurrences of <code>letter</code>
 from <code>str</code>. Your function should modify the contents of str. Test your function from <code>main</code>.</p>
 </div>
 <div class="paragraph">
@@ -220,8 +220,32 @@ following questions:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-30 12:31:01 -0500
+Last updated 2023-01-30 15:38:47 -0500
 </div>
 </div>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  messageStyle: "none",
+  tex2jax: {
+    inlineMath: [["\\(", "\\)"]],
+    displayMath: [["\\[", "\\]"]],
+    ignoreClass: "nostem|nolatexmath"
+  },
+  asciimath2jax: {
+    delimiters: [["\\$", "\\$"]],
+    ignoreClass: "nostem|noasciimath"
+  },
+  TeX: { equationNumbers: { autoNumber: "none" } }
+})
+MathJax.Hub.Register.StartupHook("AsciiMath Jax Ready", function () {
+  MathJax.InputJax.AsciiMath.postfilterHooks.Add(function (data, node) {
+    if ((node = data.script.parentNode) && (node = node.parentNode) && node.classList.contains("stemblock")) {
+      data.math.root.display = "block"
+    }
+    return data
+  })
+})
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
 </body>
 </html>
