tweak office hour wording

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ will be introduced at the end of the course.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Prof. Normoyle</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">200A</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Wednesdays, 2:30-3:30 PM, by appointment</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Wednesdays, 2:30-3:30 PM, or by appointment</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Jasmine</p></td>
@@ -749,7 +749,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-27 13:05:12 -0500
+Last updated 2023-02-01 12:54:13 -0500
 </div>
 </div>
 </body>
