--- a/assts/asst04.html
+++ b/assts/asst04.html
@@ -69,7 +69,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/main</code></p>
+<p>Run the command <code>git merge upstream/master</code></p>
 </li>
 </ul>
 </div>
@@ -514,7 +514,7 @@ $ git status</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-18 09:36:12 -0500
+Last updated 2023-02-01 16:16:12 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
