--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week02">Week 03</a></p>
+<p>Current Agenda: <a href="#week04">Week 04</a></p>
 </li>
 <li>
-<p><a href="assts/asst02.html">Assignment 02</a>: <strong>Due Feb 1st</strong>.</p>
+<p><a href="assts/asst03.html">Assignment 03</a>: <strong>Due Feb 8th</strong>.</p>
 </li>
 </ul>
 </div>
@@ -239,7 +239,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Topics: Linked lists in C. GDB, Valgrind</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 03</a>: Due Feb 8</p>
+<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 8</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 3.1-3.3</a></p>
@@ -749,7 +749,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-01 12:54:13 -0500
+Last updated 2023-02-03 12:01:03 -0500
 </div>
 </div>
 </body>
