--- a/schedule.html
+++ b/schedule.html
@@ -535,7 +535,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Topics: Linked lists in C. GDB, Valgrind</p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 03</a>: Due Feb 8</p>
+<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 8</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 3.1-3.3</a></p>
@@ -771,7 +771,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-30 12:21:59 -0500
+Last updated 2023-02-03 12:01:50 -0500
 </div>
 </div>
 </body>
