--- a/assts/asst10.html
+++ b/assts/asst10.html
@@ -54,7 +54,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/main</code></p>
+<p>Run the command <code>git merge upstream/master</code></p>
 </li>
 </ul>
 </div>
@@ -393,7 +393,7 @@ $ git status</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-18 09:36:12 -0500
+Last updated 2023-02-01 16:17:14 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
