--- a/assts/asst01.html
+++ b/assts/asst01.html
@@ -450,7 +450,7 @@ A quick way to open terminal is to use spotlight. From the keyboard, type the &l
 </table>
 </div>
 <div class="paragraph">
-<p>Unfortunately, <code>valgrind</code> and <code>gdb</code> cannot be run natively on mac.</p>
+<p>Unfortunately, <code>valgrind</code> and <code>gdb</code> cannot be run natively on mac. However, you may try running <code>leaks</code> or <code>lldb</code> which are similar. However, we recommend you still test on goldengate or a lab machine.</p>
 </div>
 </div>
 </div>
@@ -501,9 +501,6 @@ have good style.</p>
 <li>
 <p>-100% for failure to compile on linux using make</p>
 </li>
-<li>
-<p>-100% for cheating (+ honor board hearing)</p>
-</li>
 </ul>
 </div>
 </div>
@@ -511,7 +508,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-27 12:37:13 -0500
+Last updated 2023-02-10 17:42:14 -0500
 </div>
 </div>
 </body>
