--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week04">Week 04</a></p>
+<p>Current Agenda: <a href="#week05">Week 05</a></p>
 </li>
 <li>
-<p><a href="assts/asst03.html">Assignment 03</a>: <strong>Due Feb 8th</strong>.</p>
+<p><a href="assts/asst04.html">Assignment 04</a>: <strong>Due Feb 16th</strong>.</p>
 </li>
 </ul>
 </div>
@@ -265,7 +265,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.1-4.3</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 04</a>: Due Feb 15</p>
+<p><a href="assts/asst04.html">Assignment 04</a>: Due Feb 15</p>
 </li>
 <li>
 <p>Lab: <strong>Jam Redux 01; Study Guide 02</strong></p>
@@ -749,7 +749,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-03 12:01:03 -0500
+Last updated 2023-02-10 17:15:58 -0500
 </div>
 </div>
 </body>
