--- a/schedule.html
+++ b/schedule.html
@@ -561,7 +561,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.1-4.3</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 04</a>: Due Feb 15</p>
+<p><a href="assts/asst04.html">Assignment 04</a>: Due Feb 15</p>
 </li>
 <li>
 <p>Lab: <strong>Jam Redux 01; Study Guide 02</strong></p>
@@ -771,7 +771,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-03 12:01:50 -0500
+Last updated 2023-02-10 17:14:50 -0500
 </div>
 </div>
 </body>
