--- a/assts/asst03.html
+++ b/assts/asst03.html
@@ -18,6 +18,7 @@
 <li><a href="#_update_your_repository">1. Update your repository</a></li>
 <li><a href="#_cant_get_a_word_in_entwise">2. Can&#8217;t get a word in entwise</a></li>
 <li><a href="#_dynamic_songs">3. Dynamic songs</a></li>
+<li><a href="#_grading_rubric">4. Grading Rubric</a></li>
 </ul>
 </div>
 </div>
@@ -296,10 +297,89 @@ right clicking on a song.
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_grading_rubric">4. Grading Rubric</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><strong>Assignment rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>Grades are out of 4 points.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>(1 point) slow</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.5 points) no memory errors</p>
+</li>
+<li>
+<p>(0.4 points) correct behavior: asks the user for input and creates the new string</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(3 points) dynamic songs</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.15 points) style and header comment</p>
+</li>
+<li>
+<p>(0.05 points) defines a struct to hold the information for each song</p>
+</li>
+<li>
+<p>(0.5 points) correctly handles the duration and prints results in a table</p>
+</li>
+<li>
+<p>(0.8 points) reads and parses songlist.csv</p>
+</li>
+<li>
+<p>(1.5 points) creates an array to hold the data from the file (No memory errors)</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>Code rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>For full credit, your C programs must be feature-complete, robust (e.g. run without memory errors or crashing) and
+have good style.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Some credit lost for missing features or bugs, depending on severity of error</p>
+</li>
+<li>
+<p>-5% for style errors. See the <a href="../codingstandard.html">class coding style</a> here.</p>
+</li>
+<li>
+<p>-50% for memory errors</p>
+</li>
+<li>
+<p>-100% for failure to checkin work to Github</p>
+</li>
+<li>
+<p>-100% for failure to compile on linux using make</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-03 12:15:20 -0500
+Last updated 2023-02-10 19:44:18 -0500
 </div>
 </div>
 </body>
