--- a/assts/asst04.html
+++ b/assts/asst04.html
@@ -276,7 +276,7 @@ $ git status</pre>
 <p>(1.5 points) correctly handles deletion and insertion to a linked list</p>
 </li>
 <li>
-<p>(2.0 points) creates and free linked list nodes correctly</p>
+<p>(2.0 points) handles file and linked list nodes correctly (no memory errors!)</p>
 </li>
 </ul>
 </div>
@@ -314,7 +314,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-11 09:10:25 -0500
+Last updated 2023-02-11 09:18:58 -0500
 </div>
 </div>
 </body>
