--- a/assts/asst06.html
+++ b/assts/asst06.html
@@ -20,6 +20,7 @@
 <li><a href="#_decode">1. Decode</a></li>
 <li><a href="#_encode">2. Encode</a></li>
 <li><a href="#_submit_your_work">3. Submit your work</a></li>
+<li><a href="#_grading_rubric">4. Grading Rubric</a></li>
 </ul>
 </div>
 </div>
@@ -303,7 +304,7 @@ Max number of characters in the image: 6
 <p>You should report an error if the file cannot be read</p>
 </li>
 <li>
-<p>Re-use your implementation of <code>read_ppm</code> from <a href="asst05.html">Assignment 05</a>.</p>
+<p>Re-use your implementation of <code>read_ppm</code> and <code>write_ppm</code> from <a href="asst05.html">Assignment 05</a>.</p>
 </li>
 <li>
 <p>Output the size of the image along with the maximum number of characters it can store</p>
@@ -386,10 +387,99 @@ $ git status</code></pre>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_grading_rubric">4. Grading Rubric</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><strong>Assignment rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>Grades are out of 4 points.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>(1 points) bitmap</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.4 points) uses bitwise operators to display the image in ASCII</p>
+</li>
+<li>
+<p>(0.5 points) no memory errors</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(1 points) Decode</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.65 points) correct behavior</p>
+</li>
+<li>
+<p>(0.75 points) no memory errors</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(1.5 points) Encode</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.65 points) correct behavior</p>
+</li>
+<li>
+<p>(0.75 points) no memory errors</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>Code rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>For full credit, your C programs must be feature-complete, robust (e.g. run without memory errors or crashing) and
+have good style.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Some credit lost for missing features or bugs, depending on severity of error</p>
+</li>
+<li>
+<p>-5% for style errors. See the <a href="../codingstandard.html">class coding style</a> here.</p>
+</li>
+<li>
+<p>-50% for memory errors</p>
+</li>
+<li>
+<p>-100% for failure to checkin work to Github</p>
+</li>
+<li>
+<p>-100% for failure to compile on linux using make</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-11 08:59:33 -0500
+Last updated 2023-02-11 10:35:40 -0500
 </div>
 </div>
 </body>
