--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Section 5.1, Chapter 6</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 05</a>: Due Feb 22</p>
+<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 22</p>
 </li>
 <li>
 <p>Lab: <strong>Code Jam 02</strong>, <a href="studyguide2.html">Study Guide 2</a></p>
@@ -308,7 +308,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 06</a>: Due March 1</p>
+<p><a href="assts/asst06.html">Assignment 06</a>: Due March 1</p>
 </li>
 <li>
 <p>Lab: <strong>Jam 02 Redux</strong></p>
