--- a/schedule.html
+++ b/schedule.html
@@ -584,7 +584,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Section 5.1, Chapter 6</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 05</a>: Due Feb 22</p>
+<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 22</p>
 </li>
 <li>
 <p>Lab: <strong>Code Jam 02</strong>, <a href="studyguide2.html">Study Guide 2</a></p>
@@ -604,7 +604,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 06</a>: Due March 1</p>
+<p><a href="assts/asst06.html">Assignment 06</a>: Due March 1</p>
 </li>
 <li>
 <p>Lab: <strong>Jam 02 Redux</strong></p>
@@ -771,7 +771,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-10 17:14:50 -0500
+Last updated 2023-02-11 10:26:50 -0500
 </div>
 </div>
 </body>
