--- a/assts/asst02.html
+++ b/assts/asst02.html
@@ -353,12 +353,51 @@ $ git push</code></pre>
 <ul>
 <li>
 <p>(1 point) exclaim</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.4 points) correct behavior: asks the user for input and creates the new string</p>
+</li>
+<li>
+<p>(0.5 points) no memory errors</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>(1 point) acronym</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.4 points) correct behavior: asks the user for input and creates the new string</p>
+</li>
+<li>
+<p>(0.5 points) no memory errors</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>(2 points) songs</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.2 points) style and header comment</p>
+</li>
+<li>
+<p>(0.8 points) correct behavior: reads file, prints output with columns and supports editing</p>
+</li>
+<li>
+<p>(1.0 points) no memory errors</p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -393,7 +432,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-10 17:42:21 -0500
+Last updated 2023-02-12 13:09:23 -0500
 </div>
 </div>
 </body>
