--- a/studyguide2.html
+++ b/studyguide2.html
@@ -198,28 +198,7 @@ int main(int argc, char *argv[]) {
 <div class="ulist">
 <ul>
 <li>
-<p>What command do we use to debug Billie&#8217;s program using GDB?</p>
-</li>
-<li>
-<p>What GDB command can we use to run the program?</p>
-</li>
-<li>
-<p>When we run, the program stops with the following error. What GDB command can we use to find the function and line where the program stopped?</p>
-</li>
-</ul>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre>Starting program: /home/billie/cs223/a.out
-
-Program received signal SIGSEGV, Segmentation fault.
-0x00005555555551b8 in initfunc ()</pre>
-</div>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>The GDB terminal does not show human readable symbols. How do we fix this?</p>
+<p>What is a segmentation fault?</p>
 </li>
 <li>
 <p>What GDB command can we use to place a breakpoint at the start of the functions <code>main</code> and <code>initfunc</code>?</p>
@@ -306,7 +285,7 @@ int main() {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-30 12:23:55 -0500
+Last updated 2023-02-13 12:36:40 -0500
 </div>
 </div>
 </body>
