--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <li>
 <p><a href="assts/asst04.html">Assignment 04</a>: <strong>Due Feb 15th</strong>.</p>
 </li>
+<li>
+<p><a href="assts/asst05.html">Assignment 05</a>: <strong>Due Feb 22nd</strong>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -749,7 +752,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-12 14:13:37 -0500
+Last updated 2023-02-15 20:32:02 -0500
 </div>
 </div>
 </body>
