--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="assts/asst06.html">Assignment 06</a>: Due March 1</p>
 </li>
 <li>
-<p>Lab: <strong>Jam 02 Redux</strong></p>
+<p>Lab: <strong>Jam 02 Redux; Study Guide 03</strong> <a href="studyguide2.html">Study Guide 3</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -337,12 +337,12 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">March 13,15 <a id="week09"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Assembly II</strong></p>
+<p><strong>The operating system, Processes</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/.html">Assignment 07</a>: Due March 22</p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
@@ -354,7 +354,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">March 20, 22 <a id="week10"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>The operating system, Processes</strong></p>
+<p><strong>Processes and Inter-process communication (IPC)</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -362,7 +362,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 13, skip section 13.3</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 08</a>: Due March 29</p>
+<p><a href="assts/.html">Assignment 08</a>: Due March 22</p>
 </li>
 <li>
 <p>Lab: <strong>Jam 03 Redux; Jam 04 Study Guide</strong></p>
@@ -382,7 +382,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 13.4-13.6</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 09</a>: Due April 5</p>
+<p><a href="assts/.html">Assignment 09</a>: Due March 29th</p>
 </li>
 <li>
 <p><strong>Jam 04</strong>: <a href="studyguide4.html">Study Guide 4</a></p>
@@ -391,7 +391,7 @@ on lecture content, worksheets, and assignments.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 3,5 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Inter-process communication, Threads I</strong></p>
@@ -402,7 +402,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 10</a>: Due April 12</p>
+<p><a href="assts/.html">Assignment 10</a>: Due April 4</p>
 </li>
 <li>
 <p><strong>Jam 04 Redux; Jam 05 Study Guide</strong></p>
@@ -411,7 +411,7 @@ on lecture content, worksheets, and assignments.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 10,12 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads II</strong></p>
@@ -431,7 +431,7 @@ on lecture content, worksheets, and assignments.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 17,19 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Memory</strong></p>
@@ -454,7 +454,7 @@ on lecture content, worksheets, and assignments.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 24,26 <a id="week15"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Code Optimization, C++</strong></p>
