--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 <p>Current Agenda: <a href="#week07">Week 07</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.html">Assignment 05</a>: <strong>Due Feb 22nd</strong>.</p>
+<p><a href="assts/asst06.html">Assignment 06</a>: <strong>Due March 1st</strong>.</p>
 </li>
 <li>
-<p><a href="assts/asst06.html">Assignment 06</a>: <strong>Due March 1st</strong>.</p>
+<p><a href="assts/asst07.html">Assignment 07</a>: <strong>Written! Due March 15th In Class!</strong>.</p>
 </li>
 </ul>
 </div>
@@ -342,7 +342,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15</p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15 <strong>Hardcopy due in class!</strong></p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
@@ -752,7 +752,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-27 11:07:47 -0500
+Last updated 2023-03-01 09:31:56 -0500
 </div>
 </div>
 </body>
