--- a/schedule.html
+++ b/schedule.html
@@ -634,7 +634,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15</p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15 <strong>Hardcopy due in class!</strong></p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
@@ -770,7 +770,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-27 11:14:33 -0500
+Last updated 2023-03-01 09:32:57 -0500
 </div>
 </div>
 </body>
