--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week07">Week 07</a></p>
-</li>
-<li>
-<p><a href="assts/asst06.html">Assignment 06</a>: <strong>Due March 1st</strong>.</p>
+<p>Current Agenda: <a href="#week09">Week 09</a></p>
 </li>
 <li>
 <p><a href="assts/asst07.html">Assignment 07</a>: <strong>Written! Due March 15th In Class!</strong>.</p>
+</li>
+<li>
+<p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am</p>
 </li>
 </ul>
 </div>
@@ -755,7 +755,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-01 09:31:56 -0500
+Last updated 2023-03-12 16:16:00 -0400
 </div>
 </div>
 </body>
