post final exam information

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p><a href="assts/asst07.html">Assignment 07</a>: <strong>Written! Due March 15th In Class!</strong>.</p>
 </li>
 <li>
-<p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am</p>
+<p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book)</p>
 </li>
 </ul>
 </div>
@@ -755,7 +755,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-12 16:16:00 -0400
+Last updated 2023-03-12 16:16:36 -0400
 </div>
 </div>
 </body>
