--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week09">Week 09</a></p>
+<p>Current Agenda: <a href="#week10">Week 10</a></p>
 </li>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: <strong>Written! Due March 15th In Class!</strong>.</p>
+<p><strong>Class canceled: 3/15/2023!!</strong></p>
 </li>
 <li>
-<p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book)</p>
+<p><a href="assts/asst07.html">Assignment 07</a>: <strong>Written! Due March 15th (Submit to Park 200B)</strong>.</p>
+</li>
+<li>
+<p><a href="assts/asst08-1.html">Assignment 08 (Part 1)</a>: Due March 22nd, by midnight.</p>
+</li>
+<li>
+<p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book) in Park 245</p>
 </li>
 </ul>
 </div>
@@ -342,7 +348,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15 <strong>Hardcopy due in class!</strong></p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
 <p>Lab: <strong>Study Guide 03</strong> <a href="studyguide3.html">Study Guide 3</a></p>
@@ -365,7 +371,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 13.4-13.6</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 08,Part I</a>: Due March 22</p>
+<p><a href="assts/asst08-1.html">Assignment 08,Part I</a>: Due March 22</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 03</strong></p>
@@ -385,7 +391,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 08,Part II</a>: Due March 29</p>
+<p><a href="assts/asst08-2.html">Assignment 08,Part II</a>: Due March 29</p>
 </li>
 <li>
 <p>Lab: <strong>Study Guide 04</strong>: <a href="studyguide4.html">Study Guide 4</a></p>
@@ -755,7 +761,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-12 16:16:36 -0400
+Last updated 2023-03-15 16:00:37 -0400
 </div>
 </div>
 </body>
