--- a/schedule.html
+++ b/schedule.html
@@ -635,7 +635,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15 <strong>Hardcopy due in class!</strong></p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
 <p>Lab: <strong>Study Guide 03</strong> <a href="studyguide3.html">Study Guide 3</a></p>
@@ -658,7 +658,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 13.4-13.6</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 08,Part I</a>: Due March 22</p>
+<p><a href="assts/asst08-1.html">Assignment 08,Part I</a>: Due March 22</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 03</strong></p>
@@ -678,7 +678,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 08,Part II</a>: Due March 29</p>
+<p><a href="assts/asst08-2.html">Assignment 08,Part II</a>: Due March 29</p>
 </li>
 <li>
 <p>Lab: <strong>Study Guide 04</strong>: <a href="studyguide4.html">Study Guide 4</a></p>
@@ -774,7 +774,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-12 16:12:38 -0400
+Last updated 2023-03-15 16:01:22 -0400
 </div>
 </div>
 </body>
