--- a/index.html
+++ b/index.html
@@ -47,16 +47,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week10">Week 10</a></p>
+<p>Current Agenda: <a href="#week11">Week 11</a></p>
 </li>
 <li>
-<p><strong>Class canceled: 3/15/2023!!</strong></p>
-</li>
-<li>
-<p><a href="assts/asst07.html">Assignment 07</a>: <strong>Written! Due March 15th (Submit to Park 200B)</strong>.</p>
-</li>
-<li>
-<p><a href="assts/asst08-1.html">Assignment 08 (Part 1)</a>: Due March 22nd, by midnight.</p>
+<p><a href="assts/asst08-2.html">Assignment 08 (Part 2)</a>: Due March 29th, by midnight.</p>
 </li>
 <li>
 <p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book) in Park 245</p>
@@ -761,7 +755,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-15 16:00:37 -0400
+Last updated 2023-03-27 12:18:10 -0400
 </div>
 </div>
 </body>
