--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week11">Week 11</a></p>
+<p>Current Agenda: <a href="#week12">Week 12</a></p>
 </li>
 <li>
-<p><a href="assts/asst08-2.html">Assignment 08 (Part 2)</a>: Due March 29th, by midnight.</p>
+<p><a href="assts/asst09-1.html">Assignment 09 (Part 1)</a>: Due April 5th, by midnight.</p>
 </li>
 <li>
-<p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book) in Park 245</p>
+<p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book/laptop) in Park 245</p>
 </li>
 </ul>
 </div>
@@ -377,7 +377,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">March 27,29 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Inter-process communication, Threads I</strong></p>
+<p><strong>Threads I</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -397,7 +397,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 3,5 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Inter-process communication, Threads II</strong></p>
+<p><strong>Threads II</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -405,7 +405,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 09, Part I</a>: Due April 5</p>
+<p><a href="assts/asst09-1.html">Assignment 09, Part I</a>: Due April 5</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 04</strong></p>
@@ -425,7 +425,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 09, Part II</a>: Due April 12</p>
+<p><a href="assts/asst09-2.html">Assignment 09, Part II</a>: Due April 12</p>
 </li>
 <li>
 <p><strong>Jam 05 Study Guide</strong>: <a href="studyguide5.html">Study Guide 5</a></p>
@@ -755,7 +755,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-27 12:18:10 -0400
+Last updated 2023-04-01 10:30:45 -0400
 </div>
 </div>
 </body>
