--- a/schedule.html
+++ b/schedule.html
@@ -670,7 +670,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">March 27,29 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Inter-process communication, Threads I</strong></p>
+<p><strong>Threads I</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -690,7 +690,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 3,5 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Inter-process communication, Threads II</strong></p>
+<p><strong>Threads II</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -698,7 +698,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 09, Part I</a>: Due April 5</p>
+<p><a href="assts/asst09-1.html">Assignment 09, Part I</a>: Due April 5</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 04</strong></p>
@@ -718,7 +718,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/.html">Assignment 09, Part II</a>: Due April 12</p>
+<p><a href="assts/asst09-2.html">Assignment 09, Part II</a>: Due April 12</p>
 </li>
 <li>
 <p><strong>Jam 05 Study Guide</strong>: <a href="studyguide5.html">Study Guide 5</a></p>
@@ -774,7 +774,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-19 21:45:25 -0400
+Last updated 2023-04-01 09:59:41 -0400
 </div>
 </div>
 </body>
