--- a/assts/asst09-2.html
+++ b/assts/asst09-2.html
@@ -227,7 +227,7 @@ Writing file: buddhabrot-480-1650141479.ppm</code></pre>
 <div class="ulist">
 <ul>
 <li>
-<p>You should re-use your PPM and mandelbrot functions from A09. If you use a 2D array of arrays, be sure to modify and commit <code>read_ppm.h</code>!</p>
+<p>You can re-use your PPM and mandelbrot functions from A09. You should re-use your implementation for read/write PPM as well.</p>
 </li>
 <li>
 <p>Each thread should run all three steps on a quadrant of the image.</p>
@@ -308,7 +308,7 @@ $ git status</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-01 10:55:26 -0400
+Last updated 2023-04-02 14:22:34 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
