--- a/assts/asst10.html
+++ b/assts/asst10.html
@@ -20,7 +20,7 @@
 <li><a href="#_mylloc_list">3. mylloc_list</a></li>
 <li><a href="#_memory_statistics">4. Memory statistics</a>
 <ul class="sectlevel2">
-<li><a href="#_readme_due_nov_17th_in_class">4.1. README (<strong>Due Nov 17th in class</strong>)</a></li>
+<li><a href="#_readme_due_april_19th_in_class">4.1. README (<strong>Due April 19th in class</strong>)</a></li>
 </ul>
 </li>
 <li><a href="#_submit_your_work">5. Submit your work</a></li>
@@ -32,7 +32,7 @@
 <h2 id="_assignment_10_hold_on_to_your_memories">Assignment 10: Hold on to your memories</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Due Wednesday, 19th, before midnight</p>
+<p>Due Wednesday, April 19th, before midnight</p>
 </div>
 <div class="paragraph">
 <p>The goals for this assignment are:</p>
@@ -316,7 +316,7 @@ Time is 4.1e-05</code></pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_readme_due_nov_17th_in_class">4.1. README (<strong>Due Nov 17th in class</strong>)</h3>
+<h3 id="_readme_due_april_19th_in_class">4.1. README (<strong>Due April 19th in class</strong>)</h3>
 <div class="paragraph">
 <p>Read this section and answer the corresponding questions. We will visualize the execution of <code>memstats.c</code> for Round 1.
 When the program starts, we have no buffers allocated and the free list is empty.</p>
@@ -379,7 +379,7 @@ When the program starts, we have no buffers allocated and the free list is empty
 <h2 id="_submit_your_work">5. Submit your work</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Submit both your code (by midnight) <strong>and</strong> your written questions (due in class Thursday).</p>
+<p>Submit both your code (by midnight) <strong>and</strong> your written questions (due in class Wednesday).</p>
 </div>
 <div class="paragraph">
 <p>1) Push your code work to github</p>
@@ -400,7 +400,7 @@ $ git status</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-01 10:55:26 -0400
+Last updated 2023-04-02 14:23:22 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
